izmjena teksta maila pri signupu

--- a/application/views/iptvaccessnew.html
+++ b/application/views/iptvaccessnew.html
@@ -23,7 +23,7 @@ a.button {
 <p>Just launch {APPNAME} and visit the premium section to start using our content.</p>
 <p>Your subscription expires on {EXPIRYDATE} and if you want to renew you can purchase in {APPNAME}
 again. We will contact you a few days before your subscription expires just as a little friendly
-reminds.</p>
+reminder.</p>
 <p>Thanks again,</p>
 <hr />
 {APPNAME} Team
